# ControlAlgorithms

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/ControlAlgorithms/ComputeRHS/: 2DOFGimbalCascadePI.hpp  2DOFGimbalFOSMTDC.hpp  2DOFGimbalPDComputeTorqueControl.hpp  2DOFGimbalPID.hpp
src/ControlAlgorithms/ComputeRHS/2DOFGimbal/: CascadePI.hpp  FOSMTDC.hpp  PDComputeTorqueControl.hpp  Trajectory.hpp  rhsPID.hpp
src/ControlAlgorithms/ControlObjects/: 2DOFGimbalFeedbackForm.cpp  2DOFGimbalFeedbackForm.hpp
src/ControlAlgorithms/ControlObjects/2DOFGimbal/: DirectFormParams.cpp  DirectFormParams.hpp  FeedbackForm.cpp  FeedbackForm.hpp  TwoDOFGimbalDynamics.cpp  TwoDOFGimbalDynamics.hpp
src/ControlAlgorithms/Controllers/: BaseController.hpp  FirstOrderSlidingModeControlWithTimeDelay.cpp  FirstOrderSlidingModeControlWithTimeDelay.hpp
src/ControlAlgorithms/Controllers/FirstOrderSMC/: FirstOrderSlidingModeControlWithTimeDelay.cpp  FirstOrderSlidingModeControlWithTimeDelay.hpp
src/ControlAlgorithms/Controllers/PDComputedTorque/: PDComputedTorque.hpp
src/ControlAlgorithms/Controllers/PID/: PID.hpp
src/ControlAlgorithms/Types/: BasicTypes.hpp
src/ControlAlgorithms/Utils/: BasicTypes.hpp  MathFunctions.hpp  NoiseGeneration.hpp
tests/: CMakeLists.txt  Utils.hpp  test_1stOrderSlidingModeControl2DOFGimbal.cpp
tests/2DOFGimbal/: SystemConfig.hpp
tests/CascadePI/: test_2DOFGimbalCascadePIControl.cpp
tests/PDComputeTorqueControl/: test_2DOFGimbalPDComputeTorqueControl.cpp
tests/PID/: test_2DOFGimbalPIDControl.cpp
tests/TwoDOFGimbal/: SystemConfig.hpp  (+3 more)
(+32 files in other folders)
